# Taskline

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md  install.sh  tester.v0.1.2.tskln
src/: lib.rs  main.rs
taskline-bump/: Cargo.toml  README.md
taskline-bump/src/: main.rs
taskline-init/: Cargo.toml  README.md
taskline-init/src/: main.rs
